# reaktorfysik_2024

./: .Makefile.swp  .gitignore  Makefile  README.md  pyproject.toml
Datalabs/Datalab01/: 1-BasicPython.ipynb
Datalabs/Datalab02/: 2-IntermediatePythonI.ipynb
Datalabs/Datalab03/: 3-IntermediatePythonII-jens.ipynb  3-IntermediatePythonII.ipynb
Datalabs/Datalab04/: 4-Scattering_MCintro.ipynb
Datalabs/Datalab06/: 6-openMCIntro.ipynb
Datalabs/Datalab10/: 10-openMC-Scripting.ipynb
Jeppe/Datalabs/Datalab03/: 3-IntermediatePythonII.ipynb
Jeppe/Datalabs/Datalab04/: 4-Scattering_MCintro.ipynb
